// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message StorageConfig {
  oneof storage {
    S3StorageConfig s3 = 1;
    FsStorageConfig fs = 2;
    GcsStorageConfig gcs = 3;
    OssStorageConfig oss = 4;
    WebhdfsStorageConfig webhdfs = 5;
    ObsStorageConfig obs = 6;
    CosStorageConfig cos = 7;
    HdfsStorageConfig hdfs = 8;
    HuggingfaceStorageConfig huggingface = 9;
  }
}

message NetworkConfig {
   uint64 version = 100;
   uint64 min_reader_ver = 101;

   uint64 retry_timeout = 1;
   uint64 retry_io_timeout = 2;
   uint64 tcp_keepalive = 3;
   uint64 connect_timeout = 4;
   uint64 pool_max_idle_per_host = 5;
   uint64 max_concurrent_io_requests = 6;
}

message S3StorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string region = 1;
  string endpoint_url = 2;
  string access_key_id = 3;
  string secret_access_key = 4;
  string bucket = 5;
  string root = 6;
  string master_key = 7;
  bool disable_credential_loader = 8;
  bool enable_virtual_host_style = 9;
  string security_token = 10;
  string role_arn = 11;
  string external_id = 12;

  // allow_anonymous has been removed.
  // bool allow_anonymous = 13;
  reserved 13;

  NetworkConfig network_config = 14;
}

message FsStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string root = 1;
}

message GcsStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string endpoint_url = 1;
  string bucket = 2;
  string root = 3;
  string credential = 4;
  NetworkConfig network_config = 5;
}

message OssStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string endpoint_url = 1;
  string bucket = 2;
  string root = 3;
  string access_key_id = 4;
  string access_key_secret = 5;

  //  We used to have role_arn (6) and oidc_token (7) but removed later, keep those index reserved.
  //  string role_arn = 6;
  //  string oidc_token = 7;
  reserved 6, 7;

  string server_side_encryption = 8;
  string server_side_encryption_key_id = 9;
  NetworkConfig network_config = 10;
}

message WebhdfsStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string endpoint_url = 1;
  string root = 2;
  string delegation = 3;

  string user_name = 4;

  // We used to have password (5) but removed later, keep those index reserved.
  //  string password = 5;
  reserved 5;

  bool disable_list_batch = 6;
  NetworkConfig network_config = 7;
}

message ObsStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string endpoint_url = 1;
  string bucket = 2;
  string root = 3;
  string access_key_id = 4;
  string secret_access_key = 5;
  NetworkConfig network_config = 6;
}

message CosStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string endpoint_url = 1;
  string bucket = 2;
  string root = 3;
  string secret_id = 4;
  string secret_key = 5;
  NetworkConfig network_config = 6;
}

message HdfsStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string root = 1;
  string name_node = 2;
  NetworkConfig network_config = 3;
}

message HuggingfaceStorageConfig {
  uint64 version = 100;
  uint64 min_reader_ver = 101;

  string repo_id = 1;
  string repo_type = 2;
  string revision = 3;
  string root = 4;
  string token = 5;
  NetworkConfig network_config = 6;
}
